added score marathon template